Fix chart headers overlapping issue Add filtering average

--- a/deboucled.css
+++ b/deboucled.css
@@ -499,7 +499,7 @@ input[type="search"] {
   padding: 0.3rem;
   height: 100px;
 }
-.deboucled-matched-total {
+.deboucled-card-header-right {
   float: right;
   text-transform: uppercase;
   padding-right: 0.625rem;
